[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/scripts/units/unit.gd" type="Script" id=1]
[ext_resource path="res://assets/art/UI/grey_button07.png" type="Texture" id=2]
[ext_resource path="res://assets/art/sprites/Unit/medievalUnit_23.png" type="Texture" id=3]
[ext_resource path="res://assets/art/UI/red_tick.png" type="Texture" id=4]
[ext_resource path="res://assets/art/UI/green_circle.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/fonts/kenvector_future_thinn.ttf"

[sub_resource type="DynamicFont" id=3]
size = 17
use_filter = true
font_data = SubResource( 2 )

[node name="Unit" type="KinematicBody2D" groups=[
"units",
]]
position = Vector2( 256.67, 172.813 )
input_pickable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="SelectionBox" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.411765 )
position = Vector2( 0, 3.42857 )
scale = Vector2( 1, 1.14286 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.147313 )
scale = Vector2( 1, 1.32454 )
shape = SubResource( 1 )

[node name="BasicUnitSprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="UnitLabel" type="Label" parent="."]
visible = false
margin_left = -19.0
margin_top = -66.0
margin_right = 21.0
margin_bottom = -46.0
custom_fonts/font = SubResource( 3 )
text = "Unit"

[node name="LifeBar" type="TextureProgress" parent="."]
visible = false
margin_left = -34.0
margin_top = -46.0
margin_right = 33.0
margin_bottom = -29.0
min_value = 1.0
value = 80.0
exp_edit = true
rounded = true
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true
stretch_margin_left = 10
stretch_margin_top = 2
stretch_margin_right = 10
stretch_margin_bottom = 2

[node name="Timer" type="Timer" parent="."]

[connection signal="input_event" from="." to="." method="_on_unit_input_event"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
